
===== Revision history of Mail-Transport

All changes are made by Mark Overmeer <markov@cpan.org> unless
explicitly stated differently.

version 3.003:

	Fixes:
	- fix metadata [Mohammad S Anwar]
	- add pod testing

version 3.002: Wed 24 Jan 16:02:02 CET 2018

	Improvements:
	- convert to GIT
	- publish on GitHUB
	- fix license to "as perl"
	  rt.cpan.org#120319 [Jitka Plesnikova]

version 3.001: Wed  8 Nov 13:06:18 CET 2017

	Fixes:
	- link to Perl licenses.
	  rt.cpan.org#120319 [Jitka Plesnikova]

version 3.000: Thu  2 Feb 15:41:59 CET 2017

	Changes:
	- split-off from Mail::Box
	- supports perl from 5.10 (was 5.8.5)