@@ -10,6 +10,10 @@ version 3.003:
 	- fix metadata [Mohammad S Anwar]
 	- add pod testing
 
+	Improvements:
+	- return dataend() message to ::SMTP::trySend(), which may contain
+	  the message-id.  [Andy Beverley]
+
 version 3.002: Wed 24 Jan 16:02:02 CET 2018
 
 	Improvements:
